Mon Apr 18 20:06:24 EEST 2005  Pekka Riikonen <priikone@silcnet.org>

	* Autodist 1.1.

	* All 'local' variables must be at the start of function for
	  compatibility.

Sun Apr 17 20:08:28 EEST 2005  Pekka Riikonen <priikone@silcnet.org>

	* Added TODO.

	* Added pre-process-dist-hook and post-process-dist-hook.

	* Added autodist.1.

Sun Apr 16 23:00:02 EEST 2005  Pekka Riikonen <priikone@silcnet.org>

	* First release, Autodist 1.0.