@@ -1,3 +1,7 @@
+Mon Apr 18 21:05:42 EEST 2005  Pekka Riikonen <priikone@silcnet.org>
+
+	* Process '*.ad' files before calling autoconf and automake.
+
 Mon Apr 18 20:06:24 EEST 2005  Pekka Riikonen <priikone@silcnet.org>
 
 	* Autodist 1.1.
